# course_project_4th_sem

./: CMakeLists.txt  allocator_type.h  collection.h  comparer.h  database.h  database_input.txt  file.h  input_file_parse.h  log_file.txt  logger_for_use.h  main.cpp  new_comparer.h  pool.h  scheme.h  wb.h
additional_function/: file_save.h  persistence_singleton.h
allocators/: allocator.h  allocator_boundary_tags.cpp  allocator_boundary_tags.h  allocator_buddies_system.cpp  allocator_buddies_system.h  allocator_global_heap.cpp  allocator_global_heap.h  allocator_guardant.cpp  allocator_guardant.h  allocator_sorted_list.cpp  allocator_sorted_list.h  allocator_with_fit_mode.h
chain__of_resposibility/: handler.h  request_with_command.h  request_with_command_chain.h
chain_of_responsibility/: chain_of_responsibility.h  chain_of_responsibility_handler.h  handler.h  request_handler_with_command.h  request_handler_with_command_chain.h  request_with_command.h  request_with_command_chain.h
command/: command.h  command_add_collection.h  command_add_pool.h  command_add_scheme.h  command_add_value.h  command_delete_collection.h  command_delete_pool.h  command_delete_scheme.h  command_delete_value.h  command_dispose_value.h  command_find_between_value.h  command_find_time_value.h  command_find_value.h  command_update_value.h  file_save.h
comparator/: comparer.h
containers/: collection.h  database.h  key_values.h  pool.h  scheme.h  wb.h
dialog/: dialog.h  dialog_file_system.h  dialog_memory_cache.h
enums/: allocator_types.h  enums.h
flyweight/: flyweight_fabric.h  flyweight_string.h
include/: associative_container.h  b_tree.h  binary_search_tree.h  search_tree.h
logger/: client_logger.cpp  client_logger.h  client_logger_builder.cpp  client_logger_builder.h  logger.cpp  logger.h  logger_builder.cpp  logger_builder.h  logger_guardant.cpp  logger_guardant.h  logger_singleton.h
n_10/: CMakeLists.txt  main.c
n_10/check/: check.c  check.h
n_10/configuration/: configuration.c  configuration.h
n_10/gets/: gets.c  gets.h
n_10/interpreter/: interpreter.c  interpreter.h
n_10/operations/: operations.c  operations.h
n_10/string/: string.c  string.h
n_10/types/: types.h
n_10/variables/: variables.c  variables.h
parse/: file_system_parse.h  input_file_parse.h  wb.h
persistance/: chain_of_responsibility.h
tree/: associative_container.h  b_tree.h  binary_search_tree.h  search_tree.h
validate/: errors.h  validate_parameters.h
